Fixed swagger examples for /categories, /categories/{categoryId}
