# storage/api-docs/api-docs.json
@@ -116,17 +116,16 @@
                 "operationId": "f06bd4db4a5726b3eeb29567d13b0301",
                 "responses": {
                     "200": {
-                        "description": "Successfully done request",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/CategoryResource"
-                                }
-                            }
-                        }
+                        "description": "OK"
                     },
                     "401": {
                         "description": "Unauthenticated."
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "not found"
                     },
                     "403": {
                         "description": "Forbidden"
@@ -174,7 +173,7 @@
                         }
                     },
                     "401": {
-                        "description": "Unauthenticated"
+                        "description": "Unauthenticated."
                     },
                     "400": {
                         "description": "Bad Request"
@@ -248,7 +247,19 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Successfully done request"
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "Unauthenticated."
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "not found"
+                    },
+                    "403": {
+                        "description": "Forbidden"
                     }
                 },
                 "security": [
@@ -407,24 +418,6 @@
                 "type": "object",
                 "xml": {
                     "name": "Category"
-                }
-            },
-            "CategoryResource": {
-                "title": "CategoryResource",
-                "description": "Category resource",
-                "properties": {
-                    "data": {
-                        "title": "Data",
-                        "description": "Data wrapper",
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/Category"
-                        }
-                    }
-                },
-                "type": "object",
-                "xml": {
-                    "name": "CategoryResource"
                 }
             }
         },
